--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="./index.js"></script>
   </head>
   <body>
-    <h1>I want the code MY way!</h1>
+    <h1>Index</h1>
+
   </body>
 </html>
