add frist menu item

--- a/menu.html
+++ b/menu.html
@@ -3,6 +3,15 @@
   <head>
   </head>
   <body>
-
+    <ul>
+      <li>
+        <div>
+          <img />        
+          <p class="name"/>
+          <p class="description"/>
+          <p class="price"/>
+        </div>     
+      </li>
+    </ul>
   </body>
 </html>
