--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <link rel="stylesheet" type="text/css" href=
   	"http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css" />
-    <script src="./index.js"></script>
+    <script src="./src/index.js"></script>
   </head>
   <body>
-    <h1>Index</h1>
-
+      <div id="root"></div>
+      <noscript>
+        You need to enable JavaScript to run this app.
+      </noscript>
   </body>
 </html>
