--- a/Navbarbottom.html
+++ b/Navbarbottom.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="Navbarbottom.css">
 </head>
 <body>
 
@@ -48,3 +49,10 @@
  </div>
 </div>
  </nav>
+ <div class="container">
+ <div class="row">
+    <div class="col-lg-4 col-sm-6">
+      <div class="thumbnail">
+    <img src="https://images.unsplash.com/photo-1473093226795-af9932fe5856?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60">
+    </div>
+  </div>
