images and filler text

--- a/Navbarbottom.html
+++ b/Navbarbottom.html
@@ -10,10 +10,10 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse navbar-fixed-bottom">
+<nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">WebSiteName</a>
+      <a class="navbar-brand" href="#">The Food's Galore</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Contact Info</a></li>
@@ -23,39 +23,15 @@
     </ul>
   </div>
 </nav>
-<!-- fixed navbar at the bottom --
-<!--Default navbar fixed at the top -->
+<!-- fixed navbar at the bottom -->
 
-  <nav class="navbar navbar-default">
-  <div class="container">
-    <div class="navbar-header">
-   <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a href="#"class= "navbar-brand">Restaurant Name</a>
-  </div>
-  <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-    <ul class="nav navbar-nav">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-   </ul>
-   <ul class="nav navbar-nav navbar-right">
-    <li><a href="#">Special Events</a></li>
-    <li><a href="#">Menu</a></li>
-   </ul>
- </div>
-</div>
- </nav>
+  
 
-
- <div class="container">
+ <div class="container-full-bg">
   <div class="jumbotron">
-  <h1><span class="glyphicon glyphicon-camera" aria-hidden="true"></span> The Image Gallery</h1>
-  <p>A bunch of beautiful imagines for your website</p> 
-  </div>
+
+  <h1><span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>The Food's Galore</h1>
+   </div>
 <div>
 <div class="media">
   <div class="media-left media-middle">
@@ -65,7 +41,7 @@
   </div>
   <div class="media-body">
     <h4 class="media-heading">Fresh Breakfast</h4>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget duis at tellus at urna condimentum mattis pellentesque. Neque aliquam vestibulum morbi blandit cursus risus at. Cras semper auctor neque vitae. Pharetra et ultrices neque ornare aenean euismod.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Eget duis at tellus at urna condimentum mattis pellentesque. Neque aliquam vestibulum morbi blandit cursus risus at.<br> Cras semper auctor neque vitae. Pharetra et ultrices neque ornare aenean euismod.
   </div>
 </div>
 
@@ -78,7 +54,7 @@
   </div>
   <div class="media-body">
     <h4 class="media-heading">Fresh Breakfast</h4>
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget duis at tellus at urna condimentum mattis pellentesque. Neque aliquam vestibulum morbi blandit cursus risus at. Cras semper auctor neque vitae. Pharetra et ultrices neque ornare aenean euismod.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Eget duis at tellus at urna condimentum mattis pellentesque. Neque aliquam vestibulum morbi blandit cursus risus at.<br> Cras semper auctor neque vitae. Pharetra et ultrices neque ornare aenean euismod.
   </div><div class="media">
   <div class="media-left media-middle">
     <a href="#">
@@ -87,7 +63,7 @@
   </div>
   <div class="media-body">
     <h4 class="media-heading">Fresh Brunch</h4>
-    I love icing lemon drops cookie tiramisu caramels carrot cake I love topping. Liquorice biscuit chocolate candy icing brownie jelly beans sesame snaps ice cream. Icing bear claw icing I love apple pie gummies gingerbread dragée. Jelly beans carrot cake chocolate pie carrot cake I love fruitcake.
+    I love icing lemon drops cookie tiramisu caramels carrot cake I love topping.<br> Liquorice biscuit chocolate candy icing brownie jelly beans sesame snaps ice cream.<br> Icing bear claw icing I love apple pie gummies gingerbread dragée.<br> Jelly beans carrot cake chocolate pie carrot cake I love fruitcake.
 
 
   </div>
