changes to files

--- a/Navbarbottom.html
+++ b/Navbarbottom.html
@@ -64,7 +64,20 @@
   <div class="media-body">
     <h4 class="media-heading">Fresh Brunch</h4>
     I love icing lemon drops cookie tiramisu caramels carrot cake I love topping.<br> Liquorice biscuit chocolate candy icing brownie jelly beans sesame snaps ice cream.<br> Icing bear claw icing I love apple pie gummies gingerbread dragée.<br> Jelly beans carrot cake chocolate pie carrot cake I love fruitcake.
-
-
   </div>
+
+    <div class="media">
+  <div class="media-left media-middle">
+    <a href="#">
+      <img class="media-object" src="https://images.unsplash.com/photo-1541754202-9eb0e8c13b6c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Dinner">
+    </a>
+  </div>
+  <div class="media-body">
+    <h4 class="media-heading">Dinner</h4>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Eget duis at tellus at urna condimentum mattis pellentesque. Neque aliquam vestibulum morbi blandit cursus risus at.<br> Cras semper auctor neque vitae. Pharetra et ultrices neque ornare aenean euismod.
+  </div>
+  </div>
+
 </div>
+
+
