--- a/Navbarbottom.html
+++ b/Navbarbottom.html
@@ -32,7 +32,7 @@
 
   <h1><span class="glyphicon glyphicon-cutlery" aria-hidden="true"></span>The Food's Galore</h1>
    </div>
-<div>
+</div>
 <div class="media">
   <div class="media-left media-middle">
     <a href="#">
@@ -55,7 +55,8 @@
   <div class="media-body">
     <h4 class="media-heading">Fresh Breakfast</h4>
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Eget duis at tellus at urna condimentum mattis pellentesque. Neque aliquam vestibulum morbi blandit cursus risus at.<br> Cras semper auctor neque vitae. Pharetra et ultrices neque ornare aenean euismod.
-  </div><div class="media">
+  </div>
+  <div class="media">
   <div class="media-left media-middle">
     <a href="#">
       <img class="media-object" src="https://images.unsplash.com/photo-1424847651672-bf20a4b0982b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Brunch">
@@ -77,7 +78,8 @@
     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.<br> Eget duis at tellus at urna condimentum mattis pellentesque. Neque aliquam vestibulum morbi blandit cursus risus at.<br> Cras semper auctor neque vitae. Pharetra et ultrices neque ornare aenean euismod.
   </div>
   </div>
-
 </div>
+
+
 
 
